app/assets/stylesheets/footer.scss
.footer-container{
  background: #f5f5f5;
  margin-top: 300px;
  position: absolute;
  border-top: 1px solid #ccc;
}

.content-container{
  // display: flex;
  // width: 960px;
  margin: 0 auto;
  padding: 0 15px;
}

.topic-hero{
  display: flex;
  margin-bottom: 36px;
  margin-right: -120px;
  margin-left: 120px;
  // text-align: -webkit-center;
}

[class*=arrange]{
  margin-left: 15px;
  margin-right: 15px;
  flex: 1;
  width: 33%;
  padding: 0 15px;
}

[class*=arrange] h1{
  font-size: 16px;
  margin-bottom: 12px;
  color: #d32323;
  font-weight: 700;
}

.main-footer{
  padding: 36px 0 18px;
}

.about-link{
  color: #0073bb;
}

